--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,17 @@ spring.application.name=spring-boot-generate-pdf2
 #------------Database properties---------------------
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/employee?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=yu71
+spring.datasource.password=53cret
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #------------PDF Generation properties---------------------
-#pdfDir=D:/PdfReportRepo/
+pdfDir=output/
 reportFileName=Employee-Report
 reportFileNameDateFormat=dd_MMMM_yyyy
 localDateFormat="dd MMMM yyyy HH:mm:ss"
-logoImgPath=D:/img_JTO_logo.jpg
+logoImgPath=src/main/resources/logo.jpg
 logoImgScale=50,50
 currencySymbol=$
 table_noOfColumns=4
